Update to upstream release 2.2.1.